--- a/web/app/globals.css
+++ b/web/app/globals.css
@@ -3,13 +3,13 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
+  --background: #d4f1f4;
   --foreground: #171717;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #032169;
     --foreground: #ededed;
   }
 }
@@ -20,6 +20,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+/* 使用 @layer utilities 添加文本平衡功能 */
 @layer utilities {
   .text-balance {
     text-wrap: balance;
